# parsimony

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: lint.yml  publish.yml  tests.yml  types.yml
src/parsimony/: __init__.py  __main__.py  brackets.py  chains.py  cli.py  core.py  formatter.py
tests/: parsimony.py
