[project]
name = "kaapstorm-parsimony"
version = "0.1.1"
description = "A minimalist Python formatting tool"
readme = "README.md"
requires-python = ">=3.12,<3.15"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Norman Hooper", email = "kaapstorm@gmail.com" },
]
keywords = [
    "formatter",
    "code-formatter",
    "autoformatter",
    "line-length",
    "libcst",
    "code-style",
    "linter",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "libcst",
]

[project.urls]
Homepage = "https://github.com/kaapstorm/parsimony"
Source = "https://github.com/kaapstorm/parsimony"
Documentation = "https://github.com/kaapstorm/parsimony/blob/main/README.md"
Changelog = "https://github.com/kaapstorm/parsimony/blob/main/CHANGELOG.md"

[project.scripts]
parsimony = "parsimony.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/parsimony"]

[dependency-groups]
dev = [
    "ruff",
    "testsweet",
    "ty",
]

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "single"

[tool.testsweet.discovery]
include_paths = ["tests"]
